--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Vinita Porlekar - Product Manager specializing in AI/ML and Software Engineering" />
-    <meta name="keywords" content="Product Management, AI/ML, Software Engineering, Portfolio" />
-    <meta name="author" content="Vinita Porlekar" />
-    <title>Vinita Porlekar | Product Manager & AI/ML Specialist</title>
+    
+    <!-- Add this line -->
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
+    
+    <title>Vinita Porlekar - Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Allura&display=swap" rel="stylesheet"> 
 </html>
